# XL_SIM-HPC

./: .gitignore  README.md  pyproject.toml
configs/shapes/: brownian.yaml  circles.yaml  curves.yaml  ellipses.yaml  example.yaml  lines.yaml  polygons.yaml  sample_dataset.yaml  stars.yaml
configs/train/: swinir_div2k.yaml
data/GTs/: README.md
src/: main.py
src/generation/: config.py  dataset_generator.py
src/generation/shapes/: bezier_curve.py  brownian.py  circle.py  composite.py  ellipse.py  line.py  polygon.py  sheriff_star.py  spline.py  star.py
src/simulation/: microscope.py  sim_pipeline.py
src/simulation/utils/: MicroscPSF.py  calc_utils.py
src/sres/: methods.py
src/train/: train.py  train_large.py
src/utils/: biosr2arrow.py  datasets.py  datasets_large.py  lsdir2arrow.py  new_process_utils.py  preprocessing.py  process_utils.py  read_mrc.py
src/viewer/: view.py
src/viewer/widgets/: reconstruction.py  simulation.py
