[project]
name = "xl-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configargparse>=1.7.5",
    "datasets>=2.19.1",
    "deepinv>=0.3.6",
    "magic-class>=0.7.21",
    "mrcfile>=1.5.4",
    "napari[all]>=0.6.6",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.27",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.8.1",
    "wandb>=0.27.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
